# amazon-sqs-local

./: .gitignore  Cargo.toml  DATAPLANE.md  README.md  REVIEW.md  SPEC.md
analysis/: CLAUDE_CR.md
aws-inmemory-services/: README.md
docs/: analytics.md  application-integration.md  business.md  compute.md  cost-management.md  databases.md  developer-tools.md  iot.md  management.md  media.md  migration.md  ml-ai.md  networking.md  other.md  security.md  storage.md
spec/: IMPLEMENTATION.md  REVIEW.md
src/: error.rs  main.rs  queue.rs  server.rs  state.rs
tests/: acm_integration.sh  amplify_integration.sh  apigateway_integration.sh  appfabric_integration.sh  appflow_integration.sh  appmesh_integration.sh  apprunner_integration.sh  appsync_integration.sh  athena_integration.sh  autoscaling_integration.sh  b2bi_integration.sh  backup_integration.sh  batch_integration.sh  bedrock_integration.sh  billingconductor_integration.sh  braket_integration.sh  budgets_integration.sh  chime_integration.sh  cleanrooms_integration.sh  cloudformation_integration.sh  cloudfront_integration.sh  cloudhsm_integration.sh  cloudmap_integration.sh  cloudsearch_integration.sh  cloudtrail_integration.sh  cloudwatch_integration.sh  cloudwatchlogs_integration.sh  codeartifact_integration.sh  codebuild_integration.sh  codecatalyst_integration.sh  codecommit_integration.sh  codedeploy_integration.sh  codepipeline_integration.sh  cognito_integration.sh  comprehend_integration.sh  computeoptimizer_integration.sh  config_integration.sh  connect_integration.sh  controltower_integration.sh  (+123 more)
(+648 files in other folders)
