[package]
name = "aws-inmemory-services"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
form_urlencoded = "1"
